Update for new data toolkit, updated MDF
Also make serial so that it will run on Windows

--- a/0_creating-archive-formats.ipynb
+++ b/0_creating-archive-formats.ipynb
@@ -10,7 +10,8 @@
     "- [A mapping of tests to filenames](./raw-data/Summary_of_CAMP_Cells.xlsx)\n",
     "- [A mapping of tests to battery design](./raw-data/Summary_of_builds.xlsx)\n",
     "- The actual raw data from the machines in MACCOR format\n",
-    "- [A list of the cells used by Paulson et al.](./raw-data/known-cells.csv)"
+    "- [A list of the cells used by Paulson et al.](./raw-data/known-cells.csv)\n",
+    "This notebook combines them together into a single HDF5 file for each cell."
    ]
   },
   {
@@ -23,7 +24,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lward/miniconda3/envs/camp/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "C:\\Users\\lward\\AppData\\Local\\miniconda3\\envs\\camp\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -61,6 +62,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "168c0307-5d1b-47b5-bcab-f49ca6557c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5_path.mkdir(exist_ok=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d324787c-c387-4dcf-aef0-63c2e3058e7d",
    "metadata": {},
@@ -71,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "ab1aa3b1-9c90-4546-8472-81c78f116c3f",
    "metadata": {},
    "outputs": [
@@ -199,7 +210,7 @@
        "1   ABRHV-NCM523-Form-4p3.000NCM 523  Formation T...                       3.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3f08bc60-33c2-4715-b46c-e8bbe882b353",
    "metadata": {},
    "outputs": [
@@ -337,7 +348,7 @@
        "[2 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "441d814a-66ed-4885-bd8d-6a0b1f91ae91",
    "metadata": {},
    "outputs": [
@@ -385,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7bba0429-b987-451f-ae6f-33f01eb16bcd",
    "metadata": {},
    "outputs": [],
@@ -405,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "64e14d71-9ddf-4bf1-bb58-bd40c8051b6c",
    "metadata": {},
    "outputs": [],
@@ -415,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "da34a048-fd2b-4a35-b866-46cd3470069e",
    "metadata": {},
    "outputs": [
@@ -433,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b1ca600b-3449-4f3a-9822-f3c8dfc70612",
    "metadata": {},
    "outputs": [],
@@ -443,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "edbb3383-a6b0-4cbc-9ad1-4b4646d9267d",
    "metadata": {},
    "outputs": [
@@ -470,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5be1ba5c-331a-492a-9197-a1207297e7cc",
    "metadata": {},
    "outputs": [],
@@ -480,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a13dc911-c26f-4317-8995-fe1656fae274",
    "metadata": {},
    "outputs": [
@@ -498,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "d3ce5407-abbe-443d-942b-2e0a8b46c249",
    "metadata": {},
    "outputs": [
@@ -535,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "512f01bb-31ab-4ddd-9519-cdaed481a317",
    "metadata": {},
    "outputs": [
@@ -565,7 +576,7 @@
        "Name: 205, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "437a344a-1914-4357-8b9b-660c1ef64e91",
    "metadata": {},
    "outputs": [
@@ -616,7 +627,7 @@
        "Name: 21, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "89b6bc5d-0d8f-41ae-b43e-5a548b02aafd",
    "metadata": {},
    "outputs": [
@@ -665,7 +676,7 @@
     "    loading=cell_metadata['cathode_loading (mg/cm2)'],\n",
     "    porosity=cell_metadata['cathode_porosity']\n",
     ")\n",
-    "print(cathode_metadata.json(indent=2))"
+    "print(cathode_metadata.model_dump_json(indent=2))"
    ]
   },
   {
@@ -678,14 +689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "c3791f19-c058-46c2-b66f-7aa2d491daae",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'layer_count': 13.0,\n",
+       "{'layer_count': 13,\n",
        " 'anode': {'name': 'C',\n",
        "  'supplier': 'Commercial',\n",
        "  'product': 'Graphite',\n",
@@ -702,7 +713,7 @@
        " 'nominal_capacity': 0.3}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,9 +729,13 @@
     "    \"\"\"\n",
     "    \n",
     "    # Match cell description\n",
-    "    matches = cell_descriptions.query(f'build == \"{record[\"Batch\"]}\"')\n",
-    "    assert len(matches) == 1, f'Found {len(matches)} descriptions for buuld={record[\"Batch\"]}'\n",
-    "    cell_metadata = matches.iloc[0]\n",
+    "    matches = cell_descriptions.query(f'build == \"{test_record[\"Batch\"]}\"')\n",
+    "    if len(matches) > 1: \n",
+    "        print(f'WARNING: Found {len(matches)} descriptions for build=\"{test_record[\"Batch\"]}\". Picking the first')\n",
+    "    cell_metadata = matches.iloc[0].to_dict()\n",
+    "    \n",
+    "    # Replace NaNs with None so that we know they are missing\n",
+    "    cell_metadata = dict((k, None if isinstance(v, float) and np.isnan(v) else v) for k, v in cell_metadata.items())\n",
     "\n",
     "    # Describe the electrodes\n",
     "    cathode_metadata = None\n",
@@ -761,7 +776,8 @@
     "    if cell_metadata['target_capacity (Ah)'] != \"unknown\":\n",
     "        battery.nominal_capacity = cell_metadata['target_capacity (Ah)']\n",
     "    if cell_metadata['number_layers'] != \"unknown\":\n",
-    "        battery.layer_count = cell_metadata['number_layers']\n",
+    "        value = cell_metadata['number_layers']\n",
+    "        battery.layer_count = int(value) if value is not None else value\n",
     "    return battery\n",
     "describe_cell(record).dict(exclude_unset=True)"
    ]
@@ -777,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "f6a4c1c3-ee46-435f-929f-dcaadd941759",
    "metadata": {},
    "outputs": [],
@@ -787,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "146a2fb6-81ba-4db9-8958-1d3fcb9eabfc",
    "metadata": {},
    "outputs": [
@@ -830,7 +846,7 @@
        "      <td>0</td>\n",
        "      <td>0.000</td>\n",
        "      <td>ChargingState.hold</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>0.073548</td>\n",
        "      <td>0</td>\n",
        "      <td>ControlMethod.rest</td>\n",
@@ -842,7 +858,7 @@
        "      <td>0</td>\n",
        "      <td>0.162</td>\n",
        "      <td>ChargingState.hold</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>ControlMethod.rest</td>\n",
@@ -854,15 +870,15 @@
       ],
       "text/plain": [
        "   cycle_number  file_number  test_time               state  current  \\\n",
-       "0             0            0      0.000  ChargingState.hold      0.0   \n",
-       "1             0            0      0.162  ChargingState.hold      0.0   \n",
+       "0             0            0      0.000  ChargingState.hold     -0.0   \n",
+       "1             0            0      0.162  ChargingState.hold     -0.0   \n",
        "\n",
        "    voltage  step_index              method  substep_index  \n",
        "0  0.073548           0  ControlMethod.rest              0  \n",
        "1  0.000000           0  ControlMethod.rest              0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "55d5cd2c-2d4a-41e2-a138-6da9bcc3bdf0",
    "metadata": {},
    "outputs": [],
@@ -903,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "694c67c7-9576-4408-8128-684689e71605",
    "metadata": {},
    "outputs": [],
@@ -917,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "4fdfdbc8-6be0-49e6-b774-f588c422840b",
    "metadata": {},
    "outputs": [
@@ -925,14 +941,42 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [02:25<00:00,  4.13it/s]"
+      " 67%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▍                                                                              | 405/602 [29:27<21:34,  6.57s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Succeeded in parsing 601 cells\n"
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▊                                                                              | 406/602 [29:34<21:54,  6.71s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Found 3 descriptions for build=\"B35G\". Picking the first\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 602/602 [41:58<00:00,  4.18s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Succeeded in parsing 602 cells\n"
      ]
     },
     {
@@ -948,61 +992,56 @@
     "futures = []\n",
     "failures = []\n",
     "known_cells['matched'] = False\n",
-    "with ProcessPoolExecutor() as exc:\n",
-    "    for (batch_id, cell_id), group in test_descriptions.groupby(['Batch', 'Cell Number']):\n",
-    "        # Determine if this is in the \"refined\" set\n",
-    "        known_matches = np.logical_and(known_cells.batch == batch_id, known_cells.cell_number == cell_id)\n",
-    "        known_cells.loc[known_matches, 'matched'] = True\n",
-    "        is_refined = known_matches.any()\n",
-    "        if is_refined:\n",
-    "            refined += 1\n",
-    "\n",
-    "        # Get the metadata for the cell \n",
-    "        cell_name = f'batch_{batch_id}_cell_{cell_id}'\n",
-    "        cell_metadata = describe_cell(group.iloc[0])\n",
-    "\n",
-    "        # Assemble the metadata for everything else\n",
-    "        metadata = BatteryMetadata(\n",
-    "            name=f'CAMP_{cell_name}',\n",
-    "            battery=cell_metadata,\n",
-    "            dataset_name='camp_2023',\n",
-    "            authors=[\n",
-    "                ['Logan', 'Ward'],\n",
-    "                ['Joseph', 'Kubal'],\n",
-    "                ['Susan J.', 'Babinec'],\n",
-    "                ['Wenquan', 'Lu'],\n",
-    "                ['Allison', 'Dunlop'],\n",
-    "                ['Steve', 'Trask'],\n",
-    "                ['Andrew', 'Jansen'],\n",
-    "                ['Noah H.', 'Paulson'],\n",
-    "            ],\n",
-    "            associated_ids=['https://doi.org/10.1016/j.jpowsour.2022.231127']\n",
-    "        )\n",
-    "\n",
-    "        # Get the test results\n",
-    "        files = group['File Name'].apply(lambda x: data_path / x).tolist()\n",
-    "\n",
-    "        # Determine the path to save the file\n",
-    "        name = f'{cell_name}.h5'\n",
-    "        sub_dir = 'refined' if is_refined else 'other'\n",
-    "        (h5_path / sub_dir).mkdir(exist_ok=True)\n",
-    "        save_path = h5_path / sub_dir / name\n",
+    "success_count = 0\n",
+    "for (batch_id, cell_id), group in tqdm(test_descriptions.groupby(['Batch', 'Cell Number'])):\n",
+    "    # Get the metadata for the cell \n",
+    "    cell_name = f'batch_{batch_id}_cell_{cell_id}'\n",
+    "    cell_metadata = describe_cell(group.iloc[0])\n",
     "    \n",
-    "        # Submit to be processed: \n",
-    "        future = exc.submit(process_cell, extractor, files, metadata, save_path)\n",
-    "        future.record = group.iloc[0].to_dict()\n",
-    "        futures.append(future)\n",
+    "    # Determine if this is in the \"refined\" set\n",
+    "    known_matches = np.logical_and(known_cells.batch == batch_id, known_cells.cell_number == cell_id)\n",
+    "    known_cells.loc[known_matches, 'matched'] = True\n",
+    "    is_refined = known_matches.any()\n",
+    "    if is_refined:\n",
+    "        refined += 1\n",
     "\n",
-    "    # Collect results\n",
-    "    success_count = 0\n",
-    "    for future in tqdm(as_completed(futures), total=len(futures)):\n",
-    "        exc = future.exception()\n",
-    "        if exc is not None:\n",
-    "            record = future.record\n",
-    "            record['reason'] = str(exc)\n",
-    "            failures.append(record)\n",
-    "        else:\n",
-    "            success_count += 1\n",
+    "    # Assemble the metadata for everything else\n",
+    "    metadata = BatteryMetadata(\n",
+    "        name=f'CAMP_{cell_name}',\n",
+    "        battery=cell_metadata,\n",
+    "        dataset_name='camp_2023',\n",
+    "        authors=[\n",
+    "            ['Logan', 'Ward'],\n",
+    "            ['Joseph', 'Kubal'],\n",
+    "            ['Susan J.', 'Babinec'],\n",
+    "            ['Wenquan', 'Lu'],\n",
+    "            ['Allison', 'Dunlop'],\n",
+    "            ['Steve', 'Trask'],\n",
+    "            ['Andrew', 'Jansen'],\n",
+    "            ['Noah H.', 'Paulson'],\n",
+    "        ],\n",
+    "        associated_ids=['https://doi.org/10.1016/j.jpowsour.2022.231127']\n",
+    "    )\n",
+    "\n",
+    "    # Get the test results\n",
+    "    files = group['File Name'].apply(lambda x: data_path / x).tolist()\n",
+    "\n",
+    "    # Determine the path to save the file\n",
+    "    name = f'{cell_name}.h5'\n",
+    "    sub_dir = 'refined' if is_refined else 'other'\n",
+    "    (h5_path / sub_dir).mkdir(exist_ok=True)\n",
+    "    save_path = h5_path / sub_dir / name\n",
+    "\n",
+    "    # Submit to be processed: \n",
+    "    try:\n",
+    "        process_cell(extractor, files, metadata, save_path)\n",
+    "    except:\n",
+    "        raise\n",
+    "        record = group.iloc[0].to_dict()\n",
+    "        record['reason'] = str(exc)\n",
+    "        failures.append(record)\n",
+    "    else:\n",
+    "        success_count += 1\n",
     "failures = pd.DataFrame(failures)\n",
     "print(f'Succeeded in parsing {success_count} cells')"
    ]
@@ -1017,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "be458191-b47d-44f1-a66f-2ebc762383a0",
    "metadata": {},
    "outputs": [],
@@ -1035,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "4eb0e7ea-e733-45e8-bf99-154affdb61a8",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "b2ddd741-eea4-4d35-a30c-a7ae2f614dc0",
    "metadata": {},
    "outputs": [],
@@ -1072,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "db14e3fc-a649-45f2-8f33-d6954cbb0e09",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "42cc8330-bd3e-47ea-91d3-ebcdf371c02d",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1132,6 @@
       "{\n",
       "  \"name\": \"CAMP_batch_B1A_cell_4\",\n",
       "  \"battery\": {\n",
-      "    \"layer_count\": 13,\n",
       "    \"anode\": {\n",
       "      \"name\": \"C\",\n",
       "      \"supplier\": \"Commercial\",\n",
@@ -1105,16 +1143,14 @@
       "    \"cathode\": {\n",
       "      \"name\": \"HE5050\",\n",
       "      \"supplier\": \"Commercial\",\n",
-      "      \"thickness\": 63.0,\n",
-      "      \"area\": 169.2,\n",
-      "      \"loading\": 14.3,\n",
-      "      \"porosity\": 38.0\n",
+      "      \"thickness\": 68.0,\n",
+      "      \"loading\": 14.5,\n",
+      "      \"porosity\": 42.0\n",
       "    },\n",
       "    \"electrolyte\": {\n",
-      "      \"name\": \"Gen 2\",\n",
-      "      \"additives\": []\n",
+      "      \"name\": \"Gen 2\"\n",
       "    },\n",
-      "    \"nominal_capacity\": 0.3\n",
+      "    \"nominal_capacity\": 0.375\n",
       "  },\n",
       "  \"dataset_name\": \"camp_2023\",\n",
       "  \"authors\": [\n",
@@ -1153,15 +1189,13 @@
       "  ],\n",
       "  \"associated_ids\": [\n",
       "    \"https://doi.org/10.1016/j.jpowsour.2022.231127\"\n",
-      "  ],\n",
-      "  \"raw_data_columns\": {},\n",
-      "  \"cycle_stats_columns\": {}\n",
+      "  ]\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "print(data.metadata.json(exclude_defaults=True, indent=2))"
+    "print(data.metadata.model_dump_json(exclude_defaults=True, indent=2))"
    ]
   },
   {
@@ -1189,7 +1223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
