--- a/3_publish-to-mdf.ipynb
+++ b/3_publish-to-mdf.ipynb
@@ -17,9 +17,12 @@
    "outputs": [],
    "source": [
     "from mdf_connect_client import MDFConnectClient\n",
+    "from globus_sdk import LocalGlobusConnectPersonal\n",
     "from batdata import __version__ as bd_version\n",
+    "from zipfile import ZipFile, ZIP_DEFLATED\n",
+    "from pathlib import Path, PurePosixPath\n",
     "from shutil import rmtree\n",
-    "from pathlib import Path"
+    "import html"
    ]
   },
   {
@@ -33,11 +36,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "4179307d-dd2e-4b6d-a4fe-9ec579a2775a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_ep = LocalGlobusConnectPersonal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "3399a800-22ca-4f8a-8e58-fd90f5989bdb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "source_endpoint = '0c3771de-f236-11ec-b3c1-15403b7b75ed'  # Globus endpoint of my desktop\n",
+    "source_endpoint = local_ep.endpoint_id  # Globus endpoint of my desktop\n",
     "data_path = Path.cwd() / 'data'"
    ]
   },
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7dcb218f-5eb1-441c-9c6f-53c1f8cc6c4e",
    "metadata": {},
    "outputs": [],
@@ -60,6 +73,27 @@
     "for path in data_path.glob('*data/**/.ipynb_checkpoints'):\n",
     "    rmtree(path)\n",
     "    print(f'Removed: {path.relative_to(Path().cwd())}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d8f0f59-1d36-4b56-ab4a-f9e8d94fa5e4",
+   "metadata": {},
+   "source": [
+    "## Make a ZIP of all HDF5 files\n",
+    "Something easy for people to download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "a870973b-fc53-4adc-8d59-16ac514048ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with ZipFile(data_path / 'all_hdf5s.zip', 'w', compresslevel=9, compression=ZIP_DEFLATED) as zf:\n",
+    "    for file in (data_path / 'hdf5' ).rglob(\"*.h5\"):\n",
+    "        zf.write(file, arcname=file.relative_to(data_path / 'hdf5'))"
    ]
   },
   {
@@ -73,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "597c39f0-08c1-4efc-a421-924a9c4cc119",
    "metadata": {},
    "outputs": [],
@@ -92,19 +126,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "46d25494-bf3f-4e56-9cc1-40974c54eac9",
    "metadata": {},
    "outputs": [],
    "source": [
     "n_refined = len(list((data_path / 'hdf5' / 'refined').glob(\"*.h5\")))\n",
     "n_other = len(list((data_path / 'hdf5' / 'other').glob(\"*.h5\")))\n",
-    "assert n_refined + n_other == 601"
+    "assert n_refined == 300\n",
+    "assert n_refined + n_other == 602"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f134aa7b-f6db-4732-8468-4bea0519ee80",
    "metadata": {},
    "outputs": [],
@@ -139,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "80d32c82-9f40-4837-aa62-7533146488d2",
    "metadata": {},
    "outputs": [],
@@ -149,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "547277e2-64cd-4b92-a9cf-d7d51582acb6",
    "metadata": {},
    "outputs": [
@@ -157,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 301 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
+      "Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.3.2, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\n"
      ]
     }
    ],
@@ -175,13 +210,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f6c1f65-e3cc-462e-b450-6dfdbc201f8d",
+   "metadata": {},
+   "source": [
+    "Prepend the drive letter if on Windows"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1017ba7c-5973-4cab-826f-deafd612ac28",
+   "execution_count": 11,
+   "id": "a3c27fde-2cb0-4d3f-b54b-57107c072c53",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.add_data_source(f'globus://{source_endpoint}{data_path.absolute()}')"
+    "if len(data_path.drive) > 0:\n",
+    "    globus_path = data_path.relative_to(data_path.drive + '/').as_posix()\n",
+    "    globus_path = PurePosixPath('/') / data_path.drive.rstrip(':') / globus_path\n",
+    "else:\n",
+    "    globus_path = data_path.absolute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "89f7d688-0bb3-4720-affe-6bb10b2c3b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.add_data_source(f'https://app.globus.org/file-manager?origin_id={source_endpoint}&origin_path={html.escape(str(globus_path))}')"
    ]
   },
   {
@@ -195,12 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "9ad917ee-8e4a-41bc-9fac-25c9394ecb7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.add_organization(\"MDF Open\")  # Mark that we want it to go to MDF"
+    "client.set_organization(\"MDF Open\")  # Mark that we want it to go to MDF"
    ]
   },
   {
@@ -213,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "03a7dfd8-9c2f-43be-94a7-6697da60910c",
    "metadata": {},
    "outputs": [
@@ -258,21 +315,22 @@
        "    'givenName': 'Noah H.',\n",
        "    'affiliations': ['Argonne National Laboratory']}],\n",
        "  'publisher': 'Materials Data Facility',\n",
-       "  'publicationYear': '2023',\n",
+       "  'publicationYear': '2024',\n",
        "  'resourceType': {'resourceTypeGeneral': 'Dataset',\n",
        "   'resourceType': 'Dataset'},\n",
-       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 301 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.1.0, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
+       "  'descriptions': [{'description': \"Collection of cycle life tests of Li-ion batteries from the Cell Analysis, Modeling, and Prototyping (CAMP) Facility at Argonne National Laboratory. The dataset contains all 300 cells used by Paulson et al. to study the effect of feature engineering on machine learning models to predict the life of batteries, which were selected because they have a graphite anode, used low charging rates, and were tested for at least 100 cycles. We also include 302 cells that failed to meet acceptence criteria for that study. Each cell is stored in the HDF5 format of Argonne's Battery Data Toolkit v0.3.2, which includes battery metadata, the raw signal from the testing equipment, and per-cycle summaries of battery performance.\",\n",
        "    'descriptionType': 'Other'}],\n",
        "  'relatedIdentifiers': [{'relatedIdentifier': '10.1016/j.jpowsour.2022.231127',\n",
        "    'relatedIdentifierType': 'DOI',\n",
        "    'relationType': 'IsPartOf'}]},\n",
-       " 'data_sources': ['globus://0c3771de-f236-11ec-b3c1-15403b7b75ed/home/lward/Work/ASOH/publishing-camp-data/data'],\n",
+       " 'data_sources': ['https://app.globus.org/file-manager?origin_id=52ec65a8-323a-11ef-b82a-1dd816fe311b&origin_path=/C/Users/lward/Work/ROVI/publishing-camp-data/data'],\n",
        " 'test': False,\n",
        " 'update': False,\n",
-       " 'mdf': {'source_name': 'camp_2023', 'organizations': ['MDF Open']}}"
+       " 'mdf': {'source_name': 'camp_2023', 'organization': 'MDF Open'},\n",
+       " 'update_metadata_only': False}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,58 +341,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "0df24fc9-4cc4-4d5b-a137-afbb761e23e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'source_id': 'camp_2023_v3.5',\n",
-       " 'success': True,\n",
-       " 'error': None,\n",
-       " 'status_code': 202}"
+       "{'source_id': 'camp_2023', 'success': True, 'error': None, 'status_code': 202}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = client.submit_dataset(update=True)\n",
+    "result = client.submit_dataset(update=False)\n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "18bf01e3-5a52-4aa8-be55-17d0521f3b7e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Status of submission camp_2023_v3.5 (Dataset of NMC battery Tests from CAMP, 2023 Release)\n",
-      "Submitted by Logan Ward at 2023-01-25T19:57:56.015687Z\n",
-      "\n",
-      "Submission initialization was successful: The following submissions will be cancelled: ['camp_2023_v3.4'].\n",
-      "Cancellation of previous submissions was successful.\n",
-      "Connect data download was successful: 9324 files will be grouped and extracted (from 0 archives).\n",
-      "Data transfer to primary destination was successful.\n",
-      "Metadata extraction was successful: 601 metadata records extracted out of 9324 file groups.\n",
-      "Dataset curation is in progress.\n",
-      "MDF Search ingestion has not started yet.\n",
-      "Data transfer to secondary destinations has not started yet.\n",
-      "MDF Publish publication has not started yet.\n",
-      "Citrine upload has not started yet.\n",
-      "Materials Resource Registration has not started yet.\n",
-      "Post-processing cleanup has not started yet.\n",
-      "\n",
-      "This submission is still processing.\n",
-      "\n"
+     "ename": "KeyError",
+     "evalue": "'display_status'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msource_id\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\AppData\\Local\\miniconda3\\envs\\camp\\Lib\\site-packages\\mdf_connect_client\\mdfcc.py:987\u001b[0m, in \u001b[0;36mMDFConnectClient.check_status\u001b[1;34m(self, source_id, short, raw)\u001b[0m\n\u001b[0;32m    985\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat((source_id \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msource_id), active_msg))\n\u001b[0;32m    986\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 987\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[43mjson_res\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdisplay_status\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m, active_msg))\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'display_status'"
      ]
     }
    ],
@@ -367,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
